# tracker

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.project.env/: .env.template  postgres.env.template
app/app/: admin.py  settings.py  urls.py
app/templates/: base.html
app/templates/main/: dashboard.html  dashboard_extends.html
app/tracker/: admin.py  models.py  urls.py  views.py
