[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["thisisyoojin <thisisyoojin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
psycopg = {extras = ["binary"], version = "^3.2.6"}
django-htmx = "^1.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
